Fix bug where post fields overlap header bar

--- a/src/pages/dashboard/Dashboard.module.css
+++ b/src/pages/dashboard/Dashboard.module.css
@@ -25,6 +25,7 @@
   flex-direction: column;
   align-items: center;
   position: sticky;
+  z-index: 1;
   transition: transform 0.2s ease-in;
   top: 51px;
   background-color: var(--bg-color);
